# waste-classifier

./: .gitignore  README.md  docker-compose.yml  dvc.yaml  main.py  params.yaml  predict.py  pyproject.toml  template.py
app/backend/: Dockerfile  pyproject.toml
app/backend/app/: main.py
app/backend/app/api/: artifacts.py  predict.py  runs.py
app/backend/app/api/v2/: routes_models.py  routes_runs.py
app/backend/app/core/: config.py
app/backend/app/services/: predictor.py
app/frontend/: package-lock.json  package.json
app/frontend/public/: index.html
app/frontend/src/: App.tsx  api.ts  models.ts
app/frontend/src/pages/: ArtifactsPage.tsx  EvaluationPage.tsx  HomePage.tsx  PredictPage.tsx  ResultsPage.tsx  RunsPage.tsx
config/: config.yaml
src/WasteClassifier/: __init__.py
src/WasteClassifier/components/: data_ingestion.py  dataset.py  evaluate.py  prepare_base_model.py  train.py
src/WasteClassifier/components/evaluation/: evaluate_models.py
src/WasteClassifier/components/machine_learning/: feature_engineering.py  train_xgb.py  vectorize_images.py
src/WasteClassifier/components/share/: data_ingestion.py
src/WasteClassifier/config/: configuration.py
src/WasteClassifier/entity/: config_entity.py
src/WasteClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_models.py  stage_03_train.py  stage_04_evaluate.py  stage_05_evaluate_models.py
src/WasteClassifier/utils/: common.py  mlflow_utils.py
tests/: README.md  run_tests.py  test_core_components.py  test_data_ingestion_simple.py  test_evaluation_simple.py  test_training_simple.py
(+2 files in other folders)
